# AgentScale

./: .dockerignore  .flake8  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  README.zh.md  docker-compose.yml  noxfile.py  pyproject.toml
src/agentscale/: __init__.py  __main__.py  agent_service.py  main.py
src/agentscale/agents/: base.py  coding.py  rag.py
src/agentscale/api/: gateway.py
src/agentscale/core/: config.py  orchestrator.py
src/agentscale/db/: chat_history.py
src/agentscale/rag/: app.py
src/agentscale/services/: discovery.py  queue.py
tests/: __init__.py
tests/unit/: test_main.py
